--- a/w01/package.json
+++ b/w01/package.json
@@ -12,6 +12,7 @@
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
+    "react-kakao-maps-sdk": "^1.1.27",
     "react-router-dom": "^7.5.0",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.16",
