--- a/w01/package.json
+++ b/w01/package.json
@@ -9,6 +9,8 @@
     "@testing-library/user-event": "^13.2.1",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
+    "dotenv": "^16.5.0",
+    "gh-pages": "^6.3.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
@@ -22,7 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -41,5 +45,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepage": "https://yohan-work.github.io/client"
 }
