--- a/w01/package.json
+++ b/w01/package.json
@@ -10,10 +10,13 @@
     "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
     "dotenv": "^16.5.0",
+    "firebase": "^11.8.1",
     "gh-pages": "^6.3.0",
+    "moment": "^2.30.1",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-kakao-maps-sdk": "^1.1.27",
     "react-router-dom": "^7.5.0",
     "react-scripts": "5.0.1",
