--- a/w01/package.json
+++ b/w01/package.json
@@ -29,7 +29,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build --message \"Deploy React app to GitHub Pages [%s]\""
   },
   "eslintConfig": {
     "extends": [
