--- a/w01/package.json
+++ b/w01/package.json
@@ -20,6 +20,7 @@
     "react-kakao-maps-sdk": "^1.1.27",
     "react-router-dom": "^7.5.0",
     "react-scripts": "5.0.1",
+    "react-textarea-autosize": "^8.5.9",
     "styled-components": "^6.1.16",
     "web-vitals": "^2.1.0"
   },
